# ncrystal-notebooks

./: .gitignore  README.md  conda.yml
.github/resources/: run_notebooks.x
.github/resources/codcache/: cod_1011023.cif  cod_1011160.cif  cod_2310889.cif  cod_5000215.cif  cod_7123351.cif  cod_7123352.cif  cod_9008576.cif
.github/workflows/: run_notebooks.yml
notebooks/: ncrystal1_basic_01_Introduction_and_Python_API.ipynb  ncrystal1_basic_01splitB_Data_Infrastructure_and_StdDataLib.ipynb  ncrystal1_basic_01splitB_Introduction_and_Python_API.ipynb  ncrystal1_basic_02_Continued_introduction.ipynb  ncrystal1_basic_02_Data_Infrastructure_and_StdDataLib.ipynb  ncrystal1_basic_02_NCrystal_in_other_apps_and_builtin_MiniMC.ipynb  ncrystal1_basic_03_Data_Infrastructure_and_StdDataLib.ipynb  ncrystal1_basic_03_NCrystal_in_other_apps_and_builtin_MiniMC.ipynb  ncrystal1_basic_03_Scatter_patterns_with_the_builtin_MiniMC_framework.ipynb  ncrystal1_basic_04_NCrystal_as_backend_for_third_party_apps.ipynb  ncrystal2_advanced_01_Creating_materials_and_the_NCMATComposer.ipynb  ncrystal2_advanced_02_Import_crystal_structure_from_CIF_or_databases.ipynb  ncrystal2_advanced_03_Add_phonon_info_with_PhononDOSAnalyser_with_QuantumEspresso_example.ipynb  ncrystal2_advanced_04_VDOS2KNL_Connecting_phonons_to_inelastic_scattering.ipynb  ncrystal2_advanced_05_export_ENDF.ipynb
notebooks/contributed/ND2025/: ND2025_ncmat2endf.ipynb  (+3 more)
notebooks/misc/: ncrystal_sapphire_filter.ipynb
utilities/: README.md  pyproject.toml
utilities/ncrystal_notebook_utilities/: download.py  endf2ace.py  openmc.py
(+9 files in other folders)
