[project]
name = "ncrystal-notebook-utilities"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = []
authors = [
  { name="NCrystal developers" },
]
description = "Various utilities needed in NCrystal notebook examples."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/mctools/ncrystal-notebooks"
"Bug Tracker" = "https://github.com/mctools/ncrystal/issues"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ncrystal_notebook_utilities"]

