[project]
name = "ncrystal-notebook-utilities"
version = "0.0.2"
requires-python = ">=3.10"
dependencies = []
authors = [
  { name="NCrystal developers" },
]
description = "Various utilities needed in NCrystal notebook examples."
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/mctools/ncrystal-notebooks"
"Bug Tracker" = "https://github.com/mctools/ncrystal/issues"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ncrystal_notebook_utilities"]

